--- a/atividades-praticas/html/guia.html
+++ b/atividades-praticas/html/guia.html
@@ -140,6 +140,51 @@
         <p>Parágrafo dentro da div</p>
     </div>
 
+    <hr>
+
+    <h2>Formulários</h2>
+    <p>São utilizados para coletar dados do usuário.</p>
+
+    <form action="" method="post">
+        <label for="nome_completo">Nome Completo:</label><br>
+        <input type="text" name="nome_completo" id="nome_completo" placeholder="Digite o seu nome">
+
+        <br>
+
+        <label for="email">E-mail:</label><br>
+        <input type="email" name="email" id="email" placeholder="Digite o seu e-mail">
+
+        <br>
+
+        <label for="senha">Senha</label><br>
+        <input type="password" name="senha" id="senha" placeholder="Digite sua senha">
+
+        <br>
+
+        <label for="mensagem">Mensagem</label><br>
+        <textarea name="mensagem" id="mensagem" placeholder="Digite sua mensagem"></textarea>
+
+        <br>
+
+        <label for="pais">País</label>
+        <select name="pais" id="pais">
+            <option value="br">Brasil</option>
+            <option value="pt">Portugal</option>
+            <option value="us">Estados Unidos</option>
+        </select>
+
+        <br>
+
+        <label for="termos">Aceito os termos</label>
+        <input type="checkbox" name="termos" id="termos">
+        <a href="pdf.pdf" target="_blank" rel="noopener noreferrer">Ver os termos</a>
+
+        <br>
+
+        <button type="submit">Enviar Informações</button>
+        <input type="submit" value="informacoes">
+    </form>
+
 </body>
 
 </html>
