atualização arquivo bootstrap

--- a/atividades-praticas/bootstrap/pagina.html
+++ b/atividades-praticas/bootstrap/pagina.html
@@ -1,81 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Página com Bootstrap</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exemplo de Página com Bootstrap</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
 
-    <!-- INICIO NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">Empresa</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Sobre</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Seviços</a>
-              </li>        
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contato
-                </a>
-              </li>         
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <!-- FIM NAVBAR -->
-
-    <!-- INICIO CAROUSEL -->
-
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="https://picsum.photos/1200/500?random=1" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://picsum.photos/1200/500?random=2" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://picsum.photos/1200/500?random=3" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  <!-- INICIO NAVBAR -->
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Empresa</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Seviços</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contato
+            </a>
+          </li>
+        </ul>
       </div>
+    </div>
+  </nav>
+  <!-- FIM NAVBAR -->
 
-    <!-- FIM CAROUSEL -->
+  <!-- INICIO CAROUSEL -->
 
-    <!-- INICIO SERVIÇOS -->
-
-      <div class="container text-center">
-        <h2>Nossos Serviços</h2>
-
-        <!-- div.row>div.col-12.col-md-4*3 -->
-        <div class="row">
-            <div class="col-12 col-md-4"></div>
-            <div class="col-12 col-md-4"></div>
-            <div class="col-12 col-md-4"></div>
-        </div>
-
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://picsum.photos/1200/500?random=1" class="d-block w-100" alt="...">
       </div>
+      <div class="carousel-item">
+        <img src="https://picsum.photos/1200/500?random=2" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://picsum.photos/1200/500?random=3" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-    <!-- FIM SERVIÇOS -->
-    
+  <!-- FIM CAROUSEL -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <!-- INICIO SOBRE -->
+
+  <!-- div.container -->
+  <div class="container mt-5 text-center">
+    <!-- div.row>div.col-12.col-md-6*2 -->
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <!-- img.img-fluid.rounded -->
+        <img src="https://picsum.photos/600/500?random=7" alt="" class="img-fluid rounded">
+      </div>
+      <div class="col-12 col-md-6 d-flex align-items-center">
+        <div>
+          <h2>Sobre nós</h2>
+          <p>Somos uma empresa de tecnologia...Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aspernatur
+            tenetur molestias. Laboriosam consequatur similique consectetur veritatis sed quasi laudantium.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- FIM SOBRE -->
+
+  <!-- INICIO SERVIÇOS -->
+
+  <div class="container text-center my-3">
+    <h2>Nossos Serviços</h2>
+
+    <!-- div.row>div.col-12.col-md-4*3 -->
+    <div class="row">
+      <div class="col-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="https://picsum.photos/400/300?random=4" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Desenvolvimento Web</h5>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora ex iure voluptatem
+              velit vitae deleniti quia doloribus nisi, repellendus sint!</p>
+            <a href="#" class="btn btn-primary">Ir para o Serviço</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="https://picsum.photos/400/300?random=5" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Serviços de Cloud</h5>
+            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, maxime debitis
+              consectetur ad sunt voluptatibus architecto ducimus labore asperiores ab.</p>
+            <a href="#" class="btn btn-primary">Ir para o serviço</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 mb-3">
+        <div class="card">
+          <img src="https://picsum.photos/400/300?random=6" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Suporte 24h</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid eius atque fuga
+              assumenda dicta suscipit repellendus earum pariatur unde reiciendis.</p>
+            <a href="#" class="btn btn-primary">Ir para o Serviço</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- FIM SERVIÇOS -->
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
