--- a/atividades-praticas/bootstrap/pagina.html
+++ b/atividades-praticas/bootstrap/pagina.html
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+            <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Seviços</a>
+            <a class="nav-link" href="#servicos">Seviços</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contato
+            <a class="nav-link" href="#contato">Contato
             </a>
           </li>
         </ul>
@@ -66,7 +66,7 @@
   <!-- INICIO SOBRE -->
 
   <!-- div.container -->
-  <div class="container mt-5 text-center">
+  <div class="container mt-5 text-center" id="sobre">
     <!-- div.row>div.col-12.col-md-6*2 -->
     <div class="row">
       <div class="col-12 col-md-6">
@@ -87,7 +87,7 @@
 
   <!-- INICIO SERVIÇOS -->
 
-  <div class="container text-center my-3">
+  <div class="container text-center my-3" id="servicos">
     <h2>Nossos Serviços</h2>
 
     <!-- div.row>div.col-12.col-md-4*3 -->
@@ -130,6 +130,37 @@
   </div>
 
   <!-- FIM SERVIÇOS -->
+
+  <!-- INICIO CONTATO -->
+
+  <!-- div.container>div.row>div.col -->
+  <div class="container my-3" id="contato">
+    <div class="row">
+      <div class="col">
+        <h2>Contato</h2>
+        <!-- input nome, cidade, telefone -->
+         <div class="mb-3">
+          <label for="nome" class="form-label">Nome</label>
+          <input type="text" class="form-control" id="nome" placeholder="Digite seu nome">
+        </div>
+        <div class="mb-3">
+          <label for="cidade" class="form-label">Cidade</label>
+          <input type="text" class="form-control" id="cidade" placeholder="Digite sua Cidade">
+        </div>
+        <div class="mb-3">
+          <label for="telefone" class="form-label">Telefone</label>
+          <input type="tel" class="form-control" id="telefone" placeholder="(18) 99999-9999">
+        </div>
+        <div class="mb-3">
+          <label for="mensagem" class="form-label">Mensagem</label>
+          <textarea class="form-control" id="mensagem" rows="3" placeholder="Digite sua mensagem"></textarea>
+        </div>
+        <button type="button" class="btn btn-success">Enviar Mensagem</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- FIM CONTATO -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
