--- a/exercicios-individuais/bootstrap/hamburgueria.html
+++ b/exercicios-individuais/bootstrap/hamburgueria.html
@@ -38,7 +38,7 @@
                     <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                 </ul>
             </div>
-            <a href="cardapio.html" class="btn btn-danger d-none d-lg-block fs-5">Peça Já</a>
+            <a href="#menu" class="btn btn-danger d-none d-lg-block fs-5">Peça Já</a>
         </div>
     </nav>
 
