--- a/exercicios-individuais/js/dom/dom-atv.html
+++ b/exercicios-individuais/js/dom/dom-atv.html
@@ -73,6 +73,35 @@
             document.querySelector("#resultado").textContent = (Number(document.querySelector("#valor-real").value) / 5.35).toFixed(2);
          });
 
+
+         document.querySelector("#btn-calcular-desconto").addEventListener('click', function(){
+            const preco = Number(document.querySelector("#preco").value);
+            const desconto = Number(document.querySelector("#desconto").value);
+
+            const valorFinal = preco - (preco * (desconto / 100));
+
+            document.querySelector("#resultado_desconto").textContent = `R$ ${valorFinal.toFixed(2)}`;
+         });
+
+
+         document.querySelector("#btn-calcular-imc").addEventListener('click', function(){
+            const peso = Number(document.querySelector("#peso").value);
+            const altura = Number(document.querySelector("#altura").value);
+
+            const imc = peso / altura ** 2;
+            const status = "";
+            if (imc < 18.5){
+                status = "Abaixo do Peso";
+            } else if (imc >= 18.5 && imc <= 24.9){
+                status = "Peso Normal";
+            }
+
+
+            document.querySelector("#resultado_imc").textContent = imc.toFixed(2);
+
+         });
+
+
          
 
 
