--- a/exercicios-individuais/js/dom/dom-atv.html
+++ b/exercicios-individuais/js/dom/dom-atv.html
@@ -89,15 +89,29 @@
             const altura = Number(document.querySelector("#altura").value);
 
             const imc = peso / altura ** 2;
-            const status = "";
+            let status = "";
+            let cor = ""
             if (imc < 18.5){
                 status = "Abaixo do Peso";
+                cor = "yellow";
             } else if (imc >= 18.5 && imc <= 24.9){
                 status = "Peso Normal";
+                cor = "green";
+            } else if (imc >= 25 && imc <= 29.9){
+                status = "Sobrepeso";
+                cor = "orange";
+            } else if (imc >= 30 && imc <= 34.9){
+                status = "Obesidade Grau I";
+                cor = "red";
+            } else if (imc >= 35 && imc <= 39.9){
+                status = "Obesidade Grau II";
+                cor = "firebrick";
+            } else{
+                status = "Obesidade grau III";
+                cor = "darkred";
             }
-
-
-            document.querySelector("#resultado_imc").textContent = imc.toFixed(2);
+            document.querySelector("#resultado_imc").textContent = `O seu IMC é ${imc.toFixed(2)} - ${status}`;
+            document.querySelector("#resultado_imc").style.color = cor;
 
          });
 
