funções e orçamento(em andamento)

--- a/atividades-praticas/js/atv-dom_repeticoes_metodos.html
+++ b/atividades-praticas/js/atv-dom_repeticoes_metodos.html
@@ -67,6 +67,12 @@
                 nome: "Computador",
                 preco: 1999.99,
                 imagem: "https://placehold.co/300x200?text=Computador"
+            },
+             {
+                id: 8,
+                nome: "Computador2",
+                preco: 1999.99,
+                imagem: "https://placehold.co/300x200?text=Computador"
             }
         ];
 
