--- a/atividades-praticas/js/repeticoes.html
+++ b/atividades-praticas/js/repeticoes.html
@@ -86,7 +86,7 @@
         console.log(alunosAprovados);
 
         //REDUCE
-        const somaNumeros = numeros.reduce((acumulador, numero) => acumulador + numero, 5);
+        const somaNumeros = numeros.reduce((acumulador, numero) => acumulador + numero);
         console.log(somaNumeros);
         
 
