--- a/exercicios-individuais/js/projetos/cadastro/cadastro.html
+++ b/exercicios-individuais/js/projetos/cadastro/cadastro.html
@@ -16,6 +16,15 @@
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1>Lista de Usuários</h1>
                 <div>
+
+                    <!-- button.btn.btn-info -->
+                     <button class="btn btn-info" id="btn-upload-json"><i class="bi bi-upload"></i> Upload Json</button>
+
+                     <button class="btn btn-secondary" id="btn-download-json"><i class="bi bi-download"></i> Download Json</button>
+
+                     <input type="file" name="upload-json-input" id="upload-json-input" class="d-none" accept="application/json">
+
+
                     <button class="btn btn-primary" id="btn-adicionar"><i class="bi bi-plus-circle"></i> Adicionar
                         Usuário</button>
                 </div>
@@ -122,6 +131,7 @@
     </div>
 
     <script src="cadastro.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 
 </html>
