--- a/atividades-praticas/js/poo.html
+++ b/atividades-praticas/js/poo.html
@@ -27,13 +27,65 @@
             }
 
             exibirSaldo(){
-                console.log(`O saldo da conta é ${this.saldo}`);
+                console.log(`O saldo da conta é ${this.saldoInicial}`);
             }
         }
 
     const contaLucas = new ContaBancaria("Lucas", 500);
     const contaMaria = new ContaBancaria("Maria", 5000);
     contaLucas.exibirSaldo();
+
+
+
+    // CLASSE DE PRODUTO
+
+    class Produto{
+
+        constructor(nome, preco, estoque){
+            this.nome = nome;
+            this.preco = preco;
+            this.estoque = estoque;
+        }
+
+        descrever(){
+            console.log(`Produto: ${this.nome}, seu valor é ${this.preco} e o estoque atual é ${this.estoque} unidades `)
+        }
+
+        vender(quantidade){
+            if (quantidade > this.estoque){
+                console.log(`Estoque insuficiente para a venda. Temos apenas ${this.estoque} unidades do produto ${this.nome}`);
+                return;
+            }
+
+            this.estoque -= quantidade;
+            console.log(`${quantidade} unidades do produto ${this.nome} vendidas com sucesso!`);
+        }
+
+        repor(quantidade){
+            this.estoque += quantidade;
+            console.log(`Estoque renovado! ${quantidade} unidades do produto ${this.nome} adicionadas ao estoque.`)
+        }
+
+    }
+
+    const caneca = new Produto("Caneca Senai", 39.99, 10);
+    const camiseta = new Produto("Camiseta Senai", 69.99, 8);
+
+    caneca.descrever();
+    camiseta.descrever();
+
+    //manipular os produtos
+    console.log("Vendas e Reposições");
+    caneca.vender(2);
+    camiseta.vender(3);
+    caneca.vender(20);
+    caneca.repor(50);
+    caneca.vender(20);
+
+    console.log("Resultado Final");
+    caneca.descrever();
+    camiseta.descrever();
+    
 
 
 
