add index projetos update

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal dos Projetos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
 
-    <a href="exercicios-individuais/js/projetos/cadastro/cadastro.html">Cadastro de Pessoas</a>
-    <a href="exercicios-individuais/js/projetos/orçamento/atividade_orcamento.html">Orçamento Website</a>
-    <a href="exercicios-individuais/js/projetos/viagem/viagem.html">Despesas de Viagem</a>
+    <a href="exercicios-individuais/js/projetos/cadastro/cadastro.html" class="btn btn-primary">Cadastro de Pessoas</a>
+    <a href="exercicios-individuais/js/projetos/orçamento/atividade_orcamento.html" class="btn btn-danger">Orçamento Website</a>
+    <a href="exercicios-individuais/js/projetos/viagem/viagem.html" class="btn btn-succes">Despesas de Viagem</a>
     
 </body>
 </html>
