--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal dos Projetos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
 
-    <a href="exercicios-individuais/js/projetos/cadastro/cadastro.html" class="btn btn-primary">Cadastro de Pessoas</a>
-    <a href="exercicios-individuais/js/projetos/orçamento/atividade_orcamento.html" class="btn btn-danger">Orçamento Website</a>
-    <a href="exercicios-individuais/js/projetos/viagem/viagem.html" class="btn btn-succes">Despesas de Viagem</a>
-    
+    <div class="container">
+        <a href="exercicios-individuais/js/projetos/cadastro/cadastro.html" class="btn btn-primary">Cadastro de
+            Pessoas</a>
+
+        <a href="exercicios-individuais/js/projetos/orçamento/atividade_orcamento.html" class="btn btn-danger">Orçamento
+            Website</a>
+
+        <a href="exercicios-individuais/js/projetos/viagem/viagem.html" class="btn btn-success">Despesas de Viagem</a>
+    </div>
 </body>
+
 </html>
